<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="lexin">信息</string>
    <string name="friend">好友</string>
    <string name="addressbooks">通讯录</string>
  	
    <string name="login_and_register">登录/注册</string>
    <string name="pwd">密码</string>
    <string name="register_new_account">注册新账号</string>
    <string name="login">登录</string>
    
    <string name="register_account">邮箱账号</string>
    <string name="register_name">用户名称</string>
    <string name="register_region">所在地区</string>
    <string name="register_mobilephone">移动电话</string>
    <string name="register_fixphone">固定电话</string>
    <string name="register_pwd">设置密码</string>
    <string name="register_sure_pwd">确认密码</string>
    <string name="register">注册</string>
    <string name="region">地区</string>
    
    <string name="toast_email_error">请填写正确的邮箱地址</string>
    <string name="toast_pwd_inconsistent">两次密码不一致</string>
    <string name="toast_cannot_chat_with_self">不能和自己聊天!</string>
    <string name="toast_org_not_use">该功能暂不提供给外部人员使用</string>
    
    <string name="org_input_departmember">输入个人或部门名称</string>
    <string name="org_parent_directory">上级目录</string>
    
    <string name="choose_all_friend">选择全部好友</string>
    
    <string name="org">组织</string>
    
    <string name="setup_name">名称</string>
    <string name="setup_sign">地区</string>
    <string name="setup_cellphone">手机</string>
    <string name="setup_email">邮箱</string>
    <string name="setup_clear">清空聊天记录</string>
    <string name="setup_privacy">隐私</string>
    <string name="setup_exit">退出登录</string>
    <string name="setup_tel">电话</string>
    <string name="setup_prompt_delete">将删除所有个人和群组的聊天记录,及消息界面的聊天记录</string>
    <string name="setup_albumns">从手机相册选择</string>
    
    <string name="privacy_allow_other_add_friend">允许别人加我为好友</string>
    <string name="privacy_add_friend_need_verify">加我为好友时需要验证</string>

    <string name="sure_logout">确认注销</string>
    
    <string name="detail_data">详细资料</string>
    <string name="detail_intro">简介</string>
    <string name="detail_cphone">手机</string>
    <string name="detail_telephone">电话</string>
    <string name="detail_email">邮箱</string>
    <string name="detail_add_friend">加为好友</string>
    <string name="detail_confirm">通过验证</string>
    
    <string name="add_friend_verify_dialog_title">对方启用了消息验证</string>
    <string name="add_friend_verify_dialog_message">您需要发送验证申请，等对方通过后你才能发送消息，并添加其为好友。</string>
    
    <string name="chat_info">聊天信息</string>
    <string name="chat_info_create_discussion">创建讨论组</string>
    <string name="chat_info_add_from_adb">从组织里添加成员</string>
    <string name="chat_info_add_from_org">从好友里添加成员</string>
    <string name="chat_info_delete_and_exit">删除并退出讨论组</string>
    <string name="chat_info_view_members">查看讨论组成员</string>
    
    <string name="choose_member">选择会话人员</string>
    
    <string name="add_discussion_member">添加讨论组成员</string>
    <string name="create_discussion">创建讨论组</string>
    <string name="discussion">讨论组</string>
    
    <string name="adb_search_colleague">搜索同事...</string>
    <string name="adb_choose_all">选择全公司</string>
    
    <string name="work_doc">工作文档</string>
    <string name="work_doc_receive">我收到的</string>
    <string name="work_doc_send">我发出的</string>
    <string name="work_doc_send_doc">发送文档</string>
    
    <string name="region_info">
        北京:东城|西城|朝阳|丰台|石景山|海淀|门头沟|房山|通州|顺义|昌平|大兴|平谷|怀柔|密云|延庆,
        天津:和平|河东|河西|南开|河北|红桥|滨海新区|东丽|西青|津南|北辰|宁河|武清|静海|宝坻|蓟县,
		河北:石家庄|唐山|秦皇岛|邯郸|邢台|保定|张家口|承德|沧州|廊坊|衡水,
		山西:太原|大同|阳泉|长治|晋城|朔州|晋中|运城|忻州|临汾|吕梁,
		内蒙古:呼和浩特|包头|乌海|赤峰|通辽|鄂尔多斯|呼伦贝尔|巴彦淖尔|乌兰察布|兴安|锡林郭勒|阿拉善,
		辽宁:沈阳|大连|鞍山|抚顺|本溪|丹东|锦州|营口|阜新|辽阳|盘锦|铁岭|朝阳|葫芦岛,
		吉林:长春|吉林|四平|辽源|通化|白山|松原|白城|延边,
		黑龙江:哈尔滨|齐齐哈尔|鸡西|鹤岗|双鸭山|大庆|伊春|佳木斯|七台河|牡丹江|黑河|绥化|大兴安岭,
		上海:黄浦|卢湾|徐汇|长宁|静安|普陀|闸北|虹口|杨浦|闵行|宝山|嘉定|浦东新区|金山|松江|奉贤|青浦|崇明,
		江苏:南京|无锡|徐州|常州|苏州|南通|连云港|淮安|盐城|扬州|镇江|泰州|宿迁,
		浙江:杭州|宁波|温州|嘉兴|湖州|绍兴|金华|衢州|舟山|台州|丽水,
		安徽:合肥|芜湖|蚌埠|淮南|马鞍山|淮北|铜陵|安庆|黄山|滁州|阜阳|宿州|巢湖|六安|亳州|池州|宣城,
		福建:福州|厦门|莆田|三明|泉州|漳州|南平|龙岩|宁德,
		江西:南昌|景德镇|萍乡|九江|新余|鹰潭|赣州|吉安|宜春|抚州|上饶,
		山东:济南|青岛|淄博|枣庄|东营|烟台|潍坊|济宁|泰安|威海|日照|莱芜|临沂|德州|聊城|滨州|菏泽,
		河南:郑州|开封|洛阳|平顶山|安阳|鹤壁|新乡|焦作|濮阳|许昌|漯河|三门峡|南阳|商丘|信阳|周口|驻马店|济源,
		湖北:武汉|黄石|十堰|宜昌|襄阳|鄂州|荆门|孝感|荆州|黄冈|咸宁|随州|恩施|仙桃|潜江|天门|神农架,
		湖南:长沙|株洲|湘潭|衡阳|邵阳|岳阳|常德|张家界|益阳|郴州|永州|怀化|娄底|湘西,
		广东:广州|韶关|深圳|珠海|汕头|佛山|江门|湛江|茂名|肇庆|惠州|梅州|汕尾|河源|阳江|清远|东莞|中山|潮州| 揭 阳|云浮,
		广西:南宁|柳州|桂林|梧州|北海|防城港|钦州|贵港|玉林|百色|贺州|河池|来宾|崇左,
		海南:海口|三亚|五指山|琼海|儋州|文昌|万宁|东方|定安|屯昌|澄迈|临高|白沙|昌江|乐东|陵水|保亭|琼中|西 沙|南 沙|中沙,
		重庆:万州|涪陵|渝中|大渡口|江北|沙坪坝|九龙坡|南岸|北碚|两江新区|万盛|双桥|渝北|巴南|长寿|綦江|潼南|铜 梁| 大足|荣昌|璧山|梁平|城口|丰都|垫江|武隆|忠县|开县|云阳|奉节|巫山|巫溪|黔江|石柱|秀山|酉阳|彭水|江津|合川|永 川|南川,
		四川:成都|自贡|攀枝花|泸州|德阳|绵阳|广元|遂宁|内江|乐山|南充|眉山|宜宾|广安|达州|雅安|巴中|资阳|阿 坝|甘 孜|凉山,
		贵州:贵阳|六盘水|遵义|安顺|铜仁|黔西南|毕节|黔东南|黔南,
		云南:昆明|曲靖|玉溪|保山|昭通|丽江|普洱|临沧|楚雄|红河|文山|西双版纳|大理|德宏|怒江|迪庆,
		西藏:拉萨|昌都|山南|日喀则|那曲|阿里|林芝,
		陕西:西安|铜川|宝鸡|咸阳|渭南|延安|汉中|榆林|安康|商洛,
		甘肃:兰州市|嘉峪关|金昌|白银|天水|武威|张掖|平凉|酒泉|庆阳|定西|陇南|临夏|甘南,
		青海:西宁|海东|海北|黄南|海南|果洛|玉树|海西,
		宁夏:银川|石嘴山|吴忠|固原|中卫,
		新疆:乌鲁木齐|克拉玛依|吐鲁番|哈密|昌吉|博尔塔拉|巴音郭楞|阿克苏|克孜勒苏|喀什|和田|伊犁|塔城|阿勒泰|石河 子| 阿拉尔|图木舒克|五家渠, 
		台湾:台北市|高雄市|基隆市|台中市|台南市|新竹市|嘉义市|台北县|宜兰县|桃园县|新竹县|苗栗县|台中县|彰化县|南 投 县|云林县|嘉义县|台南县|高雄县|屏东县|台东县|花莲县|澎湖县, 
		香港:中西区|东区|九龙城区|观塘区|南区|深水埗区|黄大仙区|湾仔区|油尖旺区|离岛区|葵青区|北区|西贡区|沙田区| 屯门 区|大埔区|荃湾区|元朗区, 
		澳门:花地玛堂区|圣安多尼堂区|大堂区|望德堂区|风顺堂区|氹仔|路环,
		海外:美国|英国|法国|俄罗斯|加拿大|巴西|澳大利亚|印尼|泰国|马来西亚|新加坡|菲律宾|越南|印度|日本|新西兰|韩 国|德国|意大利|爱尔兰|荷兰|瑞士|乌克兰|南非|芬兰|瑞典|奥地利|西班牙|比利时|挪威|丹麦|波兰|阿根廷|白俄罗斯|哥伦 比亚|古巴|埃及|希腊|匈牙利|伊朗|蒙古|墨西哥|葡萄牙|沙特阿拉伯|土耳其|其它
</string>
</resources>