<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/content_frame"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textIsSelectable="false"
                android:text="@string/setup_email"/>
            <EditText 
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/normal_black"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="15dp"
                android:hint=""
                android:background="#00000000"/>
        </LinearLayout>
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textIsSelectable="false"
                android:text="@string/pwd"/>
            <EditText 
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/normal_black"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:hint=""
                android:inputType="textPassword"
                android:background="#00000000"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <Button 
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:text="@string/register_new_account"
            android:background="@drawable/btn_blue"/>
        <Button 
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="18dp"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:text="@string/login"
            android:background="@drawable/btn_green"/>
    </LinearLayout>

</LinearLayout>