<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title"/>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView 
                android:id="@+id/tvReceive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/normal_black"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/work_doc_receive"
                android:textIsSelectable="false"/>
            <TextView 
                android:id="@+id/tvSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/normal_black"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/work_doc_send"
                android:textIsSelectable="false"/>
        </LinearLayout>
        <View
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#ffcecece" 
        	android:layout_gravity="bottom"/>
        <ImageView 
            android:id="@+id/viewIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/workfile_sub_selected"
            android:contentDescription="@string/app_name"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <ListView 
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000"/>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/workfile_footbar_bg">
        <Button 
            android:id="@+id/btnSend"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:background="@drawable/btn_bar"
            android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>