<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/content_frame"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_account"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etUser"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:inputType="textEmailAddress"
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_name"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_region"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvRegion"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/normal_black"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_mobilephone"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etMobilePhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:inputType="phone"
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_fixphone"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etFixPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:inputType="phone"
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_pwd"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etPwd"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:inputType="textPassword"
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/register_sure_pwd"
                        android:textColor="@color/gray"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etPwdSure"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:hint=""
                        android:inputType="textPassword"
                        android:textColor="@color/normal_black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_green"
                android:text="@string/register"
                android:textColor="#ffffffff"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>